kubernetes-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: istio
  rules:
    - host: httpbin.example.com
      http:
        paths:
          - pathType: Prefix
            path: /status
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
